# AdaEdit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: appimage.yml  build-debian.yml
docs/: ada_keywords.txt  design-self-contained-ide.md  setedit_keybindings.txt
packaging/: .gitignore  adaedit.desktop  apprun-hook.sh  build-appimage.sh  manifest.env
resources/: adaedit.qrc
src/: adalexer.cpp  adalexer.h  debugger.cpp  debugger.h  lspclient.cpp  lspclient.h  main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  serialmonitor.cpp  serialmonitor.h  targetdialog.cpp  targetdialog.h
